# user-management

./: .gitignore  README.md
django-rbac/: README.md  manage.py  pyproject.toml  requirements.txt  start_project.ps1
django-rbac/config/: settings.py  urls.py
django-rbac/rbac/: admin.py  apps.py  models.py  permission_control.py  serializers.py  signals.py  urls.py  views.py
django-rbac/rbac/fixtures/: permissions_config.json
django-rbac/rbac/management/commands/: seed_rbac_v2.py
django-rbac/rbac/services/: assignment_service.py  group_service.py  permission_service.py
django-rbac/users/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
django-rbac/users/management/commands/: flush_expired_tokens.py  init_admin.py
django-rbac/users/services/: otp_service.py  user_service.py
django-rbac/users/templates/emails/: otp_email.html
